@@ -240,6 +240,7 @@ BA  82- [libpari] halfgcdii, RgX_halfgcd
 BA  83- new GP function halfgcd
 BA  84- [libpari] pari_realloc_ip
 BA  85- [libpari] random_zv, F2m_transpose, F2m_row
+BA  86- [libpari] F2Ms_ker, F2Ms_colelim, F2Ms_to_F2m, F2m_to_F2Ms
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
